recursion.cons.lessons.recursion.cons.Min.scala.error
min:2: error: not found: type list
	def lambda(l:list[Int], v:Int): Int= {
                     ^min:10: error: type mismatch;
 found   : Unit
 required: Int
}
^